# prompt_fuse

./: .env.example  .gitignore  CPU_README.md  DEMO.md  README.md  ROADMAP.md  WSL.md  pyproject.toml  requirements.txt
configs/: default.yaml  demo.yaml
data/: complex_workload.json  demo_workload.json  long_prompts.txt  sample_prompts.txt  synthetic_paraphrases.json
promptfuse/: __init__.py  config.py  pipeline.py
promptfuse/baseline/: __init__.py  llmlingua_baseline.py
promptfuse/compressor/: __init__.py  segment_compressor.py
promptfuse/evaluation/: __init__.py  baselines.py  benchmark.py  compression_eval.py  demo_experiment.py  demo_runner.py  full_eval.py  metrics.py  unifier_eval.py  vllm_client.py
promptfuse/middleware/: __init__.py  server.py
promptfuse/unifier/: __init__.py  (+2 more)
scripts/: aggregate_results.py  build_canonical_inventory.py  compressor_diagnostics.py  demo_live.ps1  demo_live.sh  generate_complex_workload.py  generate_synthetic_paraphrases.py  prepare_datasets.py  run_compression_eval.py  run_compression_sweep.py  run_cpu_pipeline.py  run_cpu_readiness_checks.py  run_demo_experiment.py  run_full_eval.py  run_full_evaluation.py  run_quality_eval.py  run_unifier_eval.py  setup.ps1  setup.sh  start_promptfuse.ps1  start_promptfuse.sh  start_vllm.ps1  start_vllm.sh  sync_to_wsl_home.sh  tau_sweep.py  train_bi_encoder.py  warm_demo_inventory.py  wsl_install_vllm_deps.sh  wsl_prefetch_models.sh  wsl_setup.sh
tests/: conftest.py  test_complex_workload.py  test_compressor_logic.py  test_core.py  test_demo.py  test_middleware.py
