[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptfuse"
version = "0.1.0"
description = "Semantic prompt compression and unification for KV cache efficiency"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aaron Sharif" },
    { name = "Mustafa Ajmal" },
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.2",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
    "datasets>=2.18",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
vllm = [
    "vllm>=0.6",
]
llmlingua = [
    "llmlingua>=0.2",
]

[project.scripts]
promptfuse-serve = "promptfuse.middleware.server:main"
promptfuse-benchmark = "promptfuse.evaluation.benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptfuse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
